--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -2,15 +2,20 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  transition: all 0.15s ease;
+  font-family: 'Ubuntu', Courier, monospace;
+
 }
 
 #root {
-  min-width: max-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 body {
   background-color: rgb(255, 255, 255);
-  color: white;
   overflow-x: hidden;
 }
 
@@ -57,19 +62,19 @@ a {
   width: 100vw;
   height: 60px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  padding: 20px;
   font-family: 'ubuntu', sans-serif;
   backdrop-filter: blur(7px);
   z-index: 999;
   transition: background-color 1s, color 1s, height 0.5s;
+  color: whitesmoke;
 }
 
 .header-home {
   height: 100px;
-  background-color: #ffffff00;
-  color: #1d9371;
+  background-color: #00000000;
+  color: #008080;
 }
 
 .header-home img {
@@ -77,23 +82,23 @@ a {
 }
 
 .header-propostas {
-  background-color: #1d9371;
+  background-color: #008080;
 }
 
 .header-noticias {
-  background-color: #1d9371;
+  background-color: #008080;
 }
 
 .header-faq {
-  background-color: #1d9371;
+  background-color: #008080;
 }
 
 .header-contato {
-  background-color: #1d9371;
+  background-color: #008080;
 }
 
 .header-dev {
-  background-color: #1d9371;
+  background-color: #008080;
 }
 
 .scroll-efect img {
@@ -105,7 +110,7 @@ a {
 }
 
 .scroll-efect {
-  background-color: #1d9371;
+  background-color: #008080;
   color: rgba(255, 255, 255, 0.846);
   box-shadow: 0 0px 20px rgba(0, 0, 0, 0.368);
   height: 60px;
@@ -211,7 +216,7 @@ a {
   justify-content: center;
   align-items: center;
   position: fixed;
-  background-color: #1d9371;
+  background-color: #008080;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
   left: 20px;
@@ -251,7 +256,7 @@ a {
 .nav-active {
   display: flex;
   padding: 5px;
-  border-bottom: 3px solid rgb(0, 247, 255);
+  border-bottom: 3px solid whitesmoke;
 }
 
 .show-sidebar {
@@ -259,14 +264,15 @@ a {
 }
 
 .home-cover {
+  margin-top: 100px;
   width: 100vw;
-  height: 100vh;
+  height: 50vh;
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
   background-color: rgba(7, 255, 152, 0);
   justify-content: space-around;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.425);
+  background: url("/src/images/banners/inicio.png") top / cover no-repeat;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;900&family=Raleway:wght@100;700&display=swap');
@@ -282,7 +288,7 @@ a {
   font-family: 'Montserrat', sans-serif;
   background-color: rgba(7, 44, 255, 0);
   font-size: 50px;
-  color: #1d9371;
+  color: #008080;
   z-index: 99;
 }
 
@@ -291,7 +297,7 @@ a {
 }
 
 .home-text-cover span {
-  color: #1d9371;
+  color: #008080;
   padding-bottom: 10px;
 }
 
@@ -362,7 +368,7 @@ a {
   border: none;
   outline: none;
   color: #fefefe;
-  background: #1d9371;
+  background: #008080;
   cursor: pointer;
   position: relative;
   z-index: 0;
@@ -406,7 +412,7 @@ a {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #1d9371;
+  background: #008080;
   left: 0;
   top: 0;
   border-radius: 10px;
@@ -426,66 +432,64 @@ a {
   }
 }
 
+.effect {
+  box-shadow: 0 7px 4px #00808030;
+}
+
+.effect:hover {
+  box-shadow: 0 7px 0px #008080;
+}
+
 .home-text-about {
-  width: 100vw;
+  margin: 50px;
+  position: relative;
+  width: 80vw;
+  max-width: 1000px;
+  padding: 40px;
   display: flex;
-  padding: 100px 20vw;
-  justify-content: space-around;
+  text-align: justify;
+  flex-direction: column;
+  border-radius: 10px;
   align-items: center;
   font-family: 'ubuntu', sans-serif;
   background-color: white;
-  color: #1d9371;
-}
-
-.home-text-about h1 {
-  text-align: flex-start;
-  font-size: 50px;
-  margin-bottom: 30px;
+  color: #008080;
 }
 
 .home-text-about p {
-  text-align: justify;
-  font-size: 18px;
-  line-height: 30px;
-}
-
-.home-text-about img {
-  margin: 50px;
-  border-radius: 50%;
-  width: 30%;
-  overflow-x: hide;
-  box-shadow: 0 0 20px #1d9371;
+  font-size: 20px;
 }
 
 .home-faq {
   width: 100vw;
   display: flex;
-  padding: 30px 20vw;
+  padding-top: 40px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-family: 'ubuntu', sans-serif;
   font-size: 20px;
   border-bottom: 1px solid white;
-  color: #1d9371;
-  background-color: white;
+  color: #008080;
+  background-image: url("/src/images/banners/oquee.png");
+  background-position: top;
+  background-size: cover;
   text-align: center;
   padding-bottom: 100px;
 }
 
 .faq-card {
   width: 100%;
-  height: 100px;
+  padding: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: large;
-  background-color: #1d9371;
-  border-radius: 20px;
+  background-color: #008080;
+  border-radius: 5px;
   margin: 10px;
   color: white;
   cursor: pointer;
-  box-shadow: 0 10px 20px #1d9371;
 }
 
 .faq-card:hover {
@@ -495,11 +499,10 @@ a {
 .contact-link-btn {
   width: auto;
   padding: 10px;
-  background-color: #c02802fe;
-  font-family: 'Montserrat', sans-serif;
-  font-size: medium;
+  background-color: red;
+  font-size: large;
   color: white;
-  border-radius: 20px;
+  border-radius: 5px;
   margin-top: 20px;
 }
 
@@ -518,13 +521,13 @@ a {
   width: 200px;
   display: flex;
   padding: 10px;
-  box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.1);
-  border-radius: 20px;
+  box-shadow: 1px 5px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: small;
-  margin: 10px;
+  margin: 20px;
 }
 
 .partner-card p {
@@ -565,13 +568,13 @@ footer aside {
   display: flex;
   flex-direction: column;
   padding: 30px;
-  border-left: 1px solid #1d9371;
+  border-left: 1px solid #008080;
   font-family: 'Montserrat', sans-serif;
 }
 
 footer img {
   width: auto;
-  height: 200px;
+  height: 300px;
 }
 
 aside a {
@@ -589,13 +592,14 @@ aside a {
   align-items: center;
   font-family: 'Ubuntu', sans-serif;
   font-size: 20px;
-  color: #1d9371;
+  color: #008080;
 }
 
 .footer-links {
-  background-color: #172f36;
   width: 100vw;
   display: flex;
+  border-top: 1px solid whitesmoke;
+  color: black;
 }
 
 .home-cover-logo {
@@ -755,75 +759,80 @@ aside a {
 }
 
 .home-proposals {
+  padding-top: 100px;
+  padding-bottom: 20px;
   width: 100vw;
   height: 100%;
   font-family: 'ubuntu', sans-serif;
-  color: #1d9371;
-  background-color: #ffffff;
-  padding: 30px 20vw 60px 20vw;
-}
-
-.home-proposals h1 {
+  color: #008080;
+  background: url("/src/images/banners/propostas.png") top / cover  no-repeat;
   display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
+  flex-direction: column;
+  align-items: center;
 }
 
-.home-proposals h2 {
-  padding: 50px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-  border-radius: 5px;
-  transition: background-color 0.2s ease;
-}
-
-.home-proposals h2:hover {
-  background-color: red;
+.home-proposals > a {
   color: white;
+  font-size: large;
+  background-color: red;
+  padding: 10px;
+  text-decoration: dashed;
+  position: relative;
+  bottom: 0;
+  border-radius: 5px;
+}
+
+.proposals-card {
+  width: 80vw;
+  color: whitesmoke;
+  max-width: 1000px;
+  background-color: #008080;
+  text-align: center;
+  padding: 50px 30px 50px 30px;
+  border-radius: 10px;
+  border: 1px solid #f0f0f0;
+}
+
+.proposals-card:hover {
+  background-color: red;
+  color: whitesmoke;
 }
 
 .card-proposals {
-  width: 60vw;
   margin: 10px;
   height: 100%;
   font-family: 'ubuntu', sans-serif;
-  color: #1d9371;
+  color: #008080;
   background-color: #ffffff;
 }
 
-.card-proposals h2 {
-  padding: 50px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-  border-radius: 5px;
-  transition: background-color 0.2s ease;
+.proposals-text {
+  width: 80vw;
+  margin: 40px 0;
+  box-shadow: 0px 0px 3px #888888;
+  border-radius: 10px;
+  font-family: 'Arial', sans-serif;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: justify;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  padding: 30px 60px;
+  font-size: larger;
 }
 
-.card-proposals h2:hover {
-  background-color: red;
-  color: white;
-}
 
 .home-last-news {
   width: 100vw;
-  height: 100%;
+  padding: 100px;
   font-family: 'ubuntu', sans-serif;
-  color: #1d9371;
-  background-color: #ffffff;
-  padding: 60px 20vw 100px 20vw;
-  text-align: justify;
+  color: #008080;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.home-last-news h1 {
-  width: 100%;
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.home-last-news a {
-  width: 100%;
 }
 
 .contact-icon {
@@ -938,14 +947,14 @@ aside a {
 
 .main-contact {
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-start;
+  flex-direction: column;
+  margin-top: 60px;
+  padding-top: 50px;
+  padding-bottom: 100px;
 }
 
 .contact-text {
-  position: absolute;
   left: 2vw;
-  top: 200px;
   width: 45vw;
 }
 
@@ -954,7 +963,7 @@ aside a {
   font-weight: bolder;
   line-height: 0.8;
   font-size: 500%;
-  color: #1d9371;
+  color: #008080;
   margin-bottom: 40px;
 }
 
@@ -962,7 +971,7 @@ aside a {
   font-family: 'Montserrat', sans-serif;
   font-weight: lighter;
   font-size: 150%;
-  color: #1d9371;
+  color: #008080;
 }
 
 mark {
@@ -997,7 +1006,6 @@ textarea {
   border: none;
   border-radius: 10px;
   padding-left: 10px;
-  box-shadow: 0 0 5px black;
 }
 
 .message-form .group-check div:hover {
@@ -1036,7 +1044,9 @@ textarea {
 
 .message-form {
   width: 100%;
-  background-color: #25abff0f;
+  background-color: #008080;
+  border-radius: 10px;
+  padding: 30px;
   z-index: 2;
   display: flex;
   flex-direction: column;
@@ -1045,7 +1055,7 @@ textarea {
   font-family: 'Montserrat', sans-serif;
   font-weight: lighter;
   font-size: 18px;
-  color: black;
+  color: white;
 }
 
 .message-form-bg-sucess {
@@ -1100,10 +1110,6 @@ textarea {
   padding-left: 10px;
 }
 
-.message-form label {
-  margin-top: 20px;
-  margin-bottom: 5px;
-}
 
 form input:focus,
 textarea:focus {
@@ -1227,14 +1233,12 @@ div.contact-group-activity {
 
 .submmit-message-btn {
   padding: 7px 17px 7px 17px;
-  margin-bottom: 50px;
   border-radius: 7px;
-  background-color: #00bebe;
+  background-color: red;
+  color: whitesmoke;
   backdrop-filter: blur(2px);
   border: transparent;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 25px;
-  color: rgb(0, 0, 0);
+  font-size: 30px;
 }
 
 .submmit-message-btn:hover {
@@ -1282,10 +1286,7 @@ div.contact-group-activity {
 
 .card-container {
   width: 50vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 30px;
+  margin-top: 20px;
 }
 
 .faq-search {
@@ -1332,7 +1333,7 @@ div.contact-group-activity {
   margin: 40px 0;
   display: flex;
   flex-direction: column;
-  background-color: #003c3ca7;
+  background-color: whitesmoke;
   border-top: 5px solid #008888;
   justify-content: flex-start;
   align-items: center;
@@ -1349,7 +1350,7 @@ div.contact-group-activity {
   width: 70vw;
   display: flex;
   flex-direction: column;
-  font-size: 15px;
+  font-size: 20px;
   padding: 10px;
   text-align: justify;
 }
@@ -1357,7 +1358,7 @@ div.contact-group-activity {
 div.accept-box {
   display: flex;
   flex-direction: row;
-  align-items: flex-end;
+  align-items: center;
 }
 
 div.accept-box input,
@@ -1368,7 +1369,6 @@ label {
 .lgpdArea p {
   font-size: 15px;
   text-align: justify;
-  padding: 10px;
 }
 
 .accept-box input {
@@ -1414,9 +1414,10 @@ label {
 }
 
 .proposals-banner {
+  margin-top: 60px;
   height: 25vw;
-  width: 100%;
-  background-image: url('../images/proposals-bg.jpg');
+  width: 100vw;
+  background-image: url('../images/banners/propostas.png');
   background-size: cover;
   background-position: bottom;
   display: flex;
@@ -1432,13 +1433,13 @@ label {
 .proposals-banner h1 {
   font-family: 'Montserrat', sans-serif;
   font-size: 70px;
-  color: #1d9371;
+  color: #008080;
   text-shadow: 5px 10px black;
   text-transform: uppercase;
 }
 
-.news-area {
-  width: 80%;
+.page-area {
+  width: 80vw;
   margin-top: 50px;
   margin-bottom: 50px;
   padding: 50px;
@@ -1449,45 +1450,43 @@ label {
   align-items: center;
 }
 
-.news-card {
-  width: 100%;
-  height: 150px;
-  box-shadow: 0px 3px 10px #00000060;
-  margin-bottom: 20px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  transition: width 0.2s;
+.page-area h1 {
+  color: #008080;
 }
 
-.news-card:hover {
-  width: 103%;
+.news-card {
+  width: 80vw;
+  max-width: 1000px;
+  padding: 30px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  border: 1px solid whitesmoke;
+  border-radius: 10px;
 }
 
 .news-card img {
-  min-width: 20%;
-  max-width: 20%;
-  height: 100%;
+  max-width: 200px;
   object-fit: cover;
+  margin-right: 30px;
 }
 
 .news-card-text {
   position: relative;
-  width: 60vw;
-  height: 120px;
-  margin: 0 20px;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   white-space: pre-wrap;
   color: black;
   overflow: hidden;
-  background: linear-gradient(to bottom, transparent 0%, transparent 40%, #fff 100%);
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .news-card-text p {
   text-align: justify;
+  font-size: 20px;
+  max-height: 100px;
 }
 
 .news-card-text span {
@@ -1514,30 +1513,30 @@ label {
 .news-text {
   width: 80vw;
   margin: 40px 0;
-  box-shadow: 0px 0px 10px #888888;
+  box-shadow: 0px 0px 3px #888888;
+  border-radius: 10px;
   font-family: 'Arial', sans-serif;
   color: black;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   text-align: justify;
   white-space: pre-wrap;
   word-wrap: break-word;
   padding: 30px 60px;
+  font-size: larger;
 }
 
-.news-text div span {
-  font-size: 13px;
-}
-
-.news-text div img {
-  box-shadow: 0px 0px 5px #888888;
+.news-text img {
+  max-width: 1000px;
+  align-self: center;
 }
 
 .news-card-text-gradient {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom, transparent 0%, transparent 50%, #ffffff 100%);
+  background: linear-gradient(to bottom, transparent 0%, #ffffff 100%);
 }
 
 .single-news-banner {
@@ -1610,17 +1609,16 @@ label {
   border-radius: 7px;
 }
 
-.observatory-pg {
+.page {
   width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.observatory-banner {
+.page-banner {
   height: 20vw;
   width: 100%;
-  background-image: url('../images/observatory-banner.jpg');
   background-size: cover;
   background-position: 0px -50px;
   margin-top: 60px;
@@ -1630,14 +1628,44 @@ label {
   align-items: center;
   overflow: hidden;
   background-color: #ccc;
-  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.595);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.595);
   text-align: center;
 }
 
-.observatory-banner h1 {
+.observatory-banner {
+  background-image: url('../images/banners/oquee.png');
+}
+
+.proposals-banner {
+  background-image: url('../images/banners/propostas.png');
+}
+
+.faq-banner {
+  background-image: url('../images/banners/faq.png');
+}
+
+.faq-banner input {
+  margin-top: 50px;
+  padding: 10px 20px;
+  font-size: 30px;
+  border-radius: 10px;
+}
+
+.news-banner {
+  background-image: url('../images/banners/noticias.png');
+  background-repeat: no-repeat;
+  background-position: top;
+}
+
+.contact-banner {
+  background-image: url('../images/banners/oquee.png');
+}
+
+
+.page-banner h1 {
   font-family: 'Montserrat', sans-serif;
   font-size: 70px;
-  color: #1d9371;
+  color: #008080;
   text-shadow: 5px 10px black;
   text-transform: uppercase;
 }
@@ -1665,7 +1693,7 @@ label {
 
 .observatory-area .observatory-titles {
   width: 100%;
-  color: #1d9371;
+  color: #008080;
   font-family: 'Roboto', sans-serif;
   font-size: 25px;
   text-align: center;
@@ -1690,7 +1718,7 @@ label {
 }
 
 .value-card {
-  color: #1d9371;
+  color: #008080;
   text-align: center;
   border-radius: 5px;
   width: 500px;
@@ -1709,7 +1737,7 @@ label {
 
 .value-card h3 {
   font-family: 'Montserrat', sans-serif;
-  color: #1d9371;
+  color: #008080;
   font-size: 20px;
   font-weight: 100;
 }
@@ -1813,7 +1841,7 @@ label {
 
 .observatory-docs {
   font-family: 'Roboto';
-  color: #1d9371;
+  color: #008080;
   width: 100%;
   height: 110%;
   display: flex;
@@ -1908,7 +1936,7 @@ label {
     transition: all 0.3s ease-in-out;
   }
 
-  .news-area {
+  .page-area {
     width: 90%;
     padding: 10px;
   }
@@ -1968,7 +1996,6 @@ label {
   .header {
     position: fixed;
     width: 100%;
-    padding: 10px;
     z-index: 9999;
     top: 0;
   }
@@ -1976,7 +2003,7 @@ label {
   .header-home {
     width: 100vw;
     height: 60px;
-    background-color: #1d9371;
+    background-color: #008080;
   }
 
   .header img {
@@ -2035,24 +2062,13 @@ label {
     font-size: 50px;
   }
 
-  .home-text-about {
-    flex-direction: column-reverse;
-    padding: 100px 15vw;
-    padding-bottom: 0;
-  }
-
-  .home-text-about img {
-    width: 80%;
-  }
-
   .home-text-about p {
     text-align: flex-start;
-    font-size: 15px;
-    text-align: justify;
+    font-size: 20px;
   }
 
   .home-proposals {
-    padding: 100px 15vw;
+    padding-bottom: 50px;
   }
 
   .home-proposals h2 {
